Fix icons on small mobiles.

--- a/src/styles/education.module.sass
+++ b/src/styles/education.module.sass
@@ -16,7 +16,6 @@
         display: flex
         align-items: center
         justify-content: space-between
-        width: 100%
         padding: 2em 2em
         margin-bottom: 4em
         h2
@@ -24,6 +23,8 @@
             font-weight: 600
             font-size: 2.5em
         .educationIcon
+            min-width: 48px
+            min-height: 48px
             font-size: 2.5em
             display: inline-block
             color: #023e8a
