--- a/src/styles/experience.module.sass
+++ b/src/styles/experience.module.sass
@@ -15,15 +15,15 @@
         display: flex
         align-items: center
         justify-content: space-between
-        width: 100%
+        //width: 100%
         padding: 2em 2em
-        @media (max-width: 400px)
-            padding: 2em 0.5em
         h2
             margin: 0
             font-weight: 600
             font-size: 2.5em
         .experienceIcon
+            min-width: 48px
+            min-height: 48px
             font-size: 2.5em
             display: inline-block
             color: #023e8a
