--- a/src/styles/portfolio.module.sass
+++ b/src/styles/portfolio.module.sass
@@ -14,16 +14,15 @@
         display: flex
         align-items: center
         justify-content: space-between
-        width: 100%
         padding: 2em 2em
         margin-bottom: 2em
-        // @media (max-width: 400px)
-        //     padding: 2em 0.5em
         h2
             font-weight: 600
             font-size: 2.5em
             margin: 0
         .portfolioIcon
+            min-width: 48px
+            min-height: 48px
             font-size: 2.5em
             display: inline-block
             color: #023e8a
