--- a/src/styles/skills.module.sass
+++ b/src/styles/skills.module.sass
@@ -11,7 +11,6 @@
         display: flex
         align-items: center
         justify-content: space-between
-        width: 100%
         padding: 2em 2em
         margin-bottom: 2em
         h2
@@ -19,6 +18,8 @@
             font-weight: 600
             font-size: 2.5em
         .skillsIcon
+            min-width: 48px
+            min-height: 48px
             font-size: 2.5em
             display: inline-block
             color: #023e8a
